js/js.translator/testData/incremental/invalidation/internalMethodFakeOverrideInFriendMain/main/middle.kt
import sample.Base

open class Middle : Base()
